# stocks_watchlist

./: .gitignore  Dockerfile  README.md  requirements.txt  stocks_prices_daily.py
.github/workflows/: run-linter.yaml  run-tests.yaml
Testing/: pyproject.toml
Testing/tests/: test_.py  test_obtener_datos_dolar.py
config/: config.json
dags/: ccl_to_redshift.py  dag_cargar_cotizaciones.py  dag_ccl.py  dolar_ccl.py  load_data_to_redshift.py  stocks_holding.py  stocks_prices_daily.py  stocks_to_redshift.py  wrapper_redshift.py
functions/: data_extraction.py  main_tasks.py  redshift_operations.py
sql/: dolar_ccl.sql  param_ticker  param_ticker.sql  stocks_prices_daily_create.sql  stocks_transactions.sql
tests/: test_get_daily_stock_data.py  test_obtener_datos_dolar.py
